[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Pawns/Robit-01.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Guns/Weap-Hold-02-Ak-47.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Guns/Weap-Hold-03-Sniper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Guns/Weap-Hold-04-M_16.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Guns/Weap-Hold-10-Blaster_Pistol.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Guns/Weap-Hold-11-Mega-Cannon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Guns/Weap-Hold-20-Grenade.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Guns/Weap-Hold-21-Nazi-Grenade.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Guns/Weap-Hold-22-Plasma-Grenade.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Guns/Weap-Hold-23-Bomb-man.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Guns/Weap-Hold-40-RPG.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Guns/Weap-Hold-50-Shot_Gun.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Guns/Weap-Hold-60-Axe.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Guns/Weap-Hold-61-Sword.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Guns/Weap-Hold-80-Leaf_Blower.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/Pawns/Robit_Pawn-01-01.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Pawns/Robit_Pawn-01-Shield.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Pawns/AnimationPlayer-pawn.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 22 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 8 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.9999
height = 34.0001

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.04766
height = 41.3699

[node name="Robit-01" type="KinematicBody2D" groups=[
"player",
"ladder",
"hittable",
]]
collision_layer = 2
collision_mask = 66078
script = ExtResource( 1 )
gun_02 = ExtResource( 2 )
gun_03 = ExtResource( 3 )
gun_04 = ExtResource( 4 )
gun_10 = ExtResource( 5 )
gun_11 = ExtResource( 6 )
gun_20 = ExtResource( 7 )
gun_21 = ExtResource( 8 )
gun_22 = ExtResource( 9 )
gun_23 = ExtResource( 10 )
gun_40 = ExtResource( 11 )
gun_50 = ExtResource( 12 )
gun_60 = ExtResource( 13 )
gun_61 = ExtResource( 14 )
gun_80 = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -10 )
texture = ExtResource( 16 )
vframes = 5
hframes = 16

[node name="Sprite_Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -10 )
texture = ExtResource( 17 )
vframes = 5
hframes = 16
frame = 15

[node name="AnimationPlayer" parent="." instance=ExtResource( 18 )]

[node name="Position2D-Arm-Gun" type="Position2D" parent="."]
position = Vector2( 6, -4 )

[node name="Shield_Timer" type="Timer" parent="."]

[node name="Shield_Hit_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Speed_Timer" type="Timer" parent="."]

[node name="Jump_Timer" type="Timer" parent="."]

[node name="NRG_Up_Timer" type="Timer" parent="."]

[node name="Stun_Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="KnockBack_Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Bounce_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D-Stand" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D-Run" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D-Prone" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14 )
shape = SubResource( 3 )
disabled = true

[node name="RayCast2D_Up" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -22 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 8

[node name="RayCast2D_Down" type="RayCast2D" parent="."]
visible = false
position = Vector2( -6, 20 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 14

[node name="RayCast2D_Down2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 6, 20 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 12

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
visible = false
position = Vector2( -8, 3 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 12

[node name="RayCast2D_Left_Down" type="RayCast2D" parent="."]
visible = false
position = Vector2( -9, -5 )
enabled = true
cast_to = Vector2( -11, 11 )
collision_mask = 12

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
visible = false
position = Vector2( 8, 3 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 12

[node name="RayCast2D_Right_Down" type="RayCast2D" parent="."]
visible = false
position = Vector2( 9, -5 )
enabled = true
cast_to = Vector2( 11, 11 )
collision_mask = 12

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 14 )
cast_to = Vector2( 0, 8 )
collision_mask = 16

[node name="RayCast2D_Plat_Test" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 16

[node name="RayCast2D_Plat_Up" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 0, -38 )
collision_mask = 4

[node name="RayCast2D_Plat_Up2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 7, -35 )
collision_mask = 4

[node name="RayCast2D_Plat_Up3" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( -7, -35 )
collision_mask = 4

[node name="Grab_Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 851968

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grab_Area2D"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Platform-Raycasts" type="Node2D" parent="."]
visible = false

[node name="Ladder_Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area2D"]
shape = SubResource( 5 )
[connection signal="timeout" from="Shield_Timer" to="." method="_on_Shield_Timer_timeout"]
[connection signal="timeout" from="Shield_Hit_Timer" to="." method="_on_Shield_Hit_Timer_timeout"]
[connection signal="timeout" from="Speed_Timer" to="." method="_on_Speed_Timer_timeout"]
[connection signal="timeout" from="Jump_Timer" to="." method="_on_Jump_Timer_timeout"]
[connection signal="timeout" from="NRG_Up_Timer" to="." method="_on_NRG_Up_Timer_timeout"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_Stun_Timer_timeout"]
[connection signal="timeout" from="KnockBack_Timer" to="." method="_on_KnockBack_Timer_timeout"]
[connection signal="timeout" from="Bounce_Timer" to="." method="_on_Bounce_Timer_timeout"]
[connection signal="body_entered" from="Grab_Area2D" to="." method="_on_Grab_Area2D_body_entered"]
[connection signal="body_exited" from="Grab_Area2D" to="." method="_on_Grab_Area2D_body_exited"]
[connection signal="body_entered" from="Ladder_Area2D" to="." method="_on_Ladder_Area2D_body_entered"]
[connection signal="body_exited" from="Ladder_Area2D" to="." method="_on_Ladder_Area2D_body_exited"]
